# uicsmodels

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
gaussian-processes/: gpmodels.py  meanfunctions.py
src/gaussianprocesses/: likelihoods.py  utils.py
uicsmodels/gaussianprocesses/: gpmodels.py  inference.py  kernels.py  likelihoods.py  meanfunctions.py
uicsmodels/mixturemodels/: __init__.py
