[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prob-models"
authors= [{name = "Max Hinne", email = "max.hinne@donders.ru.nl"}]
description = "Models used in the Uncertainty in Complex Systems group"
requires-python = ">=3.7"
keywords=[
    "Bayesian inference",
    "machine learning",
    "statistics",
    "mcmc",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
	"jax>=0.4.4",
	"distrax>=0.1.13@git+https://github.com/deepmind/distrax.git",  
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/mhinne/prob-models"
repository = "https://github.com/mhinne/prob-models"

[project.license]
text="Apache License 2.0"
files=["LICENSE"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools_scm]
write_to = "prob-models/_version.py"