[metadata]

name = ProbModels
version = 0.0.1
author = Max Hinne
author_email = max.hinne@donders.ru.nl
description = Prob models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhinne/prob-models
project_urls =
Bug Tracker = https://github.com/mhinne/prob-models/issues

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
= src

packages = find:
python_requires = >=3.9
install_requires =
   jax